Cleanup rendered assets

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            smcleod.net
 description:      Brian Dump Of Sam McLeod, Melbourne
-disqus_shortname: smcleod.net 
+disqus_shortname: smcleodnet
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
