--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: http://smcleod.net
 # Owner/author information
 owner:
   name:           Sam McLeod
-  avatar:         /avatar.jpg
+  avatar:         avatar.jpg
   bio:            "Ops Lead @Infoxchange"
   email:          smj(at)fastmail(dot)com
   # Social networking links used in footer. Update and remove as you like.
