--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            smcleod.net
-description:      Brian Dump Of Sam McLeod, Melbourne
+description:      'Brian Dump Of Sam McLeod, Melbourne'
 disqus_shortname: smcleodnet
 reading_time:     true
 words_per_minute: 200
