--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: http://smcleod.net
+url: http://dev.smcleod.net
 
 # Owner/author information
 owner:
@@ -19,7 +19,7 @@ owner:
   linkedin: au.linkedin.com/in/sammcj/en
 
 # Background image to be tiled on all pages
-background: /black_lozenge.png
+background: black_lozenge.png
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-59178670-1
