--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title:            "Brain Dump"
+title:            "smcleod dot net"
 description:      'smcleod.net'
 disqus_shortname: smcleodnet
 reading_time:     true
 words_per_minute: 200
-# Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
-# When testing locally leave blank or use http://localhost:4000
 url: //smcleod.net
 
 # Owner/author information
