remove background pattern

--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,12 @@ owner:
   avatar:         avatar.jpg
   bio:            "Ops Lead @Infoxchange"
   email:          smj(at)fastmail(dot)com
-  # Social networking links used in footer. Update and remove as you like.
   twitter: s_mcleod
   github: sammcj
   linkedin: au.linkedin.com/in/sammcj/en
 
 # Background image to be tiled on all pages
-background: black_lozenge.png
+#background: black_lozenge.png
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-59178670-1
