use rouge even though it sucks

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ paginate: 6
 permalink:   /:categories/:title/
 timezone:    Australia/Melbourne
 future:      true
-highlighter: pygments
+highlighter: rouge
 google_analytics: UA-59178670-1
 google_verify: nV3mQhSg4qnV69-hIGRP0i-KCo6Q4cOKlFcsNQ_pDqM
 excerpt_separator: "<!--more-->"
