--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:  "smcleod dot net"
+title:            "smcleod dot net"
 author: "Sam McLeod"
-description:  'smcleod.net'
-#subheading: "Sam McLeod's Blog"
+description:      'smcleod.net'
+#subheading: "Really cool blog about ... something"
 more: "read more"
 url: "https://smcleod.net"
 #baseurl: "/contrast" # comment out if in root directory
