add chicken scratchings to title

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            "smcleod dot net"
+title: "chicken scratchings with smcleod"
 author: "Sam McLeod"
-description:      'smcleod.net'
-#subheading: "Really cool blog about ... something"
+description: "smcleod.net - chicken scratchings - To flinch, or twitch uncontrollably falling to sleep, or while semi-conscious..."
+# subheading: ""
 more: "read more"
 url: "https://smcleod.net"
 #baseurl: "/contrast" # comment out if in root directory
