--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,103 @@
-title: "chicken scratchings with smcleod"
-author: "Sam McLeod"
-description: "smcleod.net - chicken scratchings - To flinch, or twitch uncontrollably falling to sleep, or while semi-conscious..."
-# subheading: ""
-more: "read more"
+# --- Serving options --- #
+
+# url is the full website URL
+# baseurl is the website's URL without the hostname
+
+# If you are building a simple GitHub user page (username.github.io) then use these settings:
 url: "https://smcleod.net"
-#baseurl: "/contrast" # comment out if in root directory
+baseurl: ""
 
-comments:
-    disqus: "smcleodnet"
+# If you are building a GitHub project page then use these settings:
+#url: "http://username.github.io/projectname"
+#baseurl: "/projectname"
 
-style:
-#    body: "whitesmoke"
-    padding: 33%
-    anchor: "#46f"
-    serif-heading: false
-    nav: "#181818"
-#    headline: "#06f"
-    description: "white"
-    article:
-        odd: "#ffffff"
-        even: "#222222"
+# Of course don't forget to change the username and projectname to YOUR username and project
 
-links:
-  - github: "https://github.com/sammcj/"
-  - twitter: "https://twitter.com/s_mcleod/"
-  - linkedin: "http://au.linkedin.com/in/sammcj/en"
+# Name of website
+title: "chicken scratchings with smcleod"
 
-gems:
-  - jekyll-paginate
-  - jekyll-feed
+# Short description of your site
+description: "smcleod.net - chicken scratchings - To flinch, or twitch uncontrollably falling to sleep, or while semi-conscious..."
 
-paginate: 6
-permalink:   /:categories/:title/
-timezone:    Australia/Melbourne
-future:      true
-highlighter: rouge
-google_analytics: UA-59178670-1
-google_verify: nV3mQhSg4qnV69-hIGRP0i-KCo6Q4cOKlFcsNQ_pDqM
+keywords: "devops,systems,engineer,linux,puppet,xen,xenserver,opensource,oss,infoxchange,melbourne,infracoders"
+
+# --- Navigation bar options --- #
+
+# Image to show in the navigation bar - image must be a square (width = height)
+# Remove this parameter if you don't want an image in the navbar
+avatar: "/images/samm.png"
+
+  # List of links in the navigation bar
+navbar-links:
+  Home: ""
+  #About Me: "aboutme"
+  Archive: "https://smcleod.net/archive.html"
+
+# --- Footer options --- #
+
+# Change all these values or delete the ones you don't want.
+# Important: you must keep the "name" parameter, everything else you can remove
+author:
+  name: Sam McLeod
+  #email: "youremail@domain.com"
+  github: sammcj
+  twitter: s_mcleod
+  #linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
+
+# Select which links to show in the footer
+footer-links-active:
+  rss: false
+  facebook: true
+  email: true
+  twitter: true
+  github: true
+  linkedin: false
+  stackoverflow: false
+
+# How to display the link to the website in the footer
+# Remove this if you don't want a link in the footer
+url-pretty: "smcleod.net"  # eg. "deanattali.com/beautiful-jekyll"
+
+# --- Misc --- #
+
+# Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
+disqus: "smcleodnet"
+
+# Fill in your Google Analytics ID to track your website using GA
+google_analytics: "UA-59178670-1"
+
 excerpt_separator: "<!--more-->"
 
-defaults: [{scope: {path: ""}, values: {layout: "default"}}, {scope: {path: "", type: "posts"}, values: {comments: true}}]
+# --- Don't need to touch anything below here (but you can if you want) --- #
+
+# Output options (more information on Jekyll's site)
+timezone: "Australia/Melbourne"
+markdown: kramdown
+highlighter: pygments
+permalink: /:categories/:title/
+paginate: 8
+
+# Default YAML values (more information on Jekyll's site)
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      comments: true  # add comments to all blog posts
+  -
+    scope:
+      path: "" # all files
+    values:
+      layout: "default"
+
+# Exclude these files from production site
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - CNAME
+  - Vagrantfile
+
+gems: [jekyll-paginate]
