--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: "chicken scratchings with smcleod"
+title: "smcleod.net"
 
 # Short description of your site
 description: "smcleod.net - chicken scratchings - To flinch, or twitch uncontrollably falling to sleep, or while semi-conscious..."
@@ -47,8 +47,8 @@ author:
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
-  email: true
+  facebook: false
+  email: false
   twitter: true
   github: true
   linkedin: false
