--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ avatar: "/images/samm.png"
   # List of links in the navigation bar
 navbar-links:
   Home: ""
-  #About Me: "aboutme"
+  MondoTunes: "https://mondotunes.org"
   #Archive: "https://smcleod.net/archive.html"
 
 # --- Footer options --- #
