update jekyll, post about utf8

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: "smcleod.net"
 # Short description of your site
 description: "smcleod.net - chicken scratchings - To flinch, or twitch uncontrollably falling to sleep, or while semi-conscious..."
 
-keywords: "devops,systems,engineer,linux,puppet,xen,xenserver,opensource,oss,infoxchange,melbourne,infracoders"
+keywords: "devops,systems,engineer,linux,puppet,xen,xenserver,opensource,oss,infoxchange,melbourne,infracoders,postgresql"
 
 # --- Navigation bar options --- #
 
