--- a/_config.yml
+++ b/_config.yml
@@ -33,3 +33,7 @@ timezone: "Australia/Melbourne"
 # Build settings
 markdown: kramdown
 highlighter: rouge
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
