--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 paginate: 20
 baseurl: ""
-disqus: "smcleodnet"
+# disqus: "smcleodnet"
 google_analytics: "UA-59178670-1"
 excerpt_separator: "<!--more-->"
 timezone: "Australia/Melbourne"
