--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ github_username: sammcj
 minimal_mistakes_skin: default # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise
 search: true
 og_image: "/assets/images/logo.png"
-baseurl: ""
-#siteurl: "https://smcleod.net"
+#baseurl: ""
+siteurl: "https://smcleod.net"
 
-# Build settings
+# Build settingsn
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
