--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,7 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-# Config docs:
+# Theme docs:
 # https://mmistakes.github.io/minimal-mistakes/docs/configuration/
 
 # Site settings
@@ -130,10 +123,14 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+quotes_musings_archive:
+  type: liquid
+  path: /quotes-musings/
 jekyll-archives:
   enabled:
     - categories
     - tags
+    - musings
   layouts:
     category: archive-taxonomy
     tag: archive-taxonomy
