--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 main:
   - title: "Posts"
     url: /posts/
+  # - title: "Categories"
+  #   url: /categories/
+  - title: "Tags"
+    url: /tags/
   - title: "Quotes and Musings"
     url: /quotes-musings/
-  - title: "Categories"
-    url: /categories/
   - title: "About"
     url: /about/
