change home to grid photo layout, add navigation in posts

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
+  - title: "Posts by Year"
     url: /posts/
   # - title: "Categories"
   #   url: /categories/
-  - title: "Tags"
+  - title: "Posts by Tags"
     url: /tags/
   - title: "Quotes and Musings"
     url: /quotes-musings/
