--- a/_config.yml
+++ b/_config.yml
@@ -104,17 +104,20 @@ defaults:
       type: posts
     values:
       layout: single
+      toc: true
       author_profile: true
       read_time: true
       comments: false
       share: true
       related: true
+      
   # _pages
   - scope:
       path: "_pages"
       type: pages
     values:
       layout: single
+      toc: true
       author_profile: true
 
 category_archive:
