--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,19 @@
 main:
-  - title: "Posts by Year"
+  - title: "Posts"
     url: /posts/
   # - title: "Categories"
   #   url: /categories/
-  - title: "Posts by Tags"
-    url: /tags/
   - title: "Quotes and Musings"
     url: /quotes-musings/
   - title: "Links"
     url: /links/
   - title: "About"
     url: /about/
+
+sidebar:
+  - title:
+    children:
+  - title: "Posts by Year"
+    url: /posts/
+  - title: "Posts by Tags"
+    url: /tags/
