--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   name    : "Sam McLeod"
   avatar  : "/assets/images/logo.png"
   gravatar: e56154546cf4be74e393c62d1ae9f9d4
-  bio     : "Platform, Site & Delivery Engineer, Ops Lead, DevOps Proponent, Consultant & Music Geek - Above all on a never ending journey to improve myself and all that I can be to the world"
+  bio     : "Platform, Site & Delivery Engineer, Ops Lead, DevOps Proponent, Consultant & Music Geek - On a never ending journey to improve myself and all that I can be to the world"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
