--- a/.github/workflows/codeball.yml
+++ b/.github/workflows/codeball.yml
@@ -3,14 +3,20 @@ on:
   pull_request:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   codeball_job:
     runs-on: ubuntu-latest
     name: Run Codeball
     steps:
       - name: Codeball AI Actions
-        uses: sturdy-dev/codeball-action@v1
+        uses: sturdy-dev/codeball-action@v2
         with:
-          do-label: "true"                    # Configure if the action should label approved contributions
-          label-name: "codeball:approved"     # Configure the label name to set if Codeball approves the contribution
-        #   do-approve: "true"                  # Configure if the action should approve PRs that have been approved by Codeball
+          approvePullRequests: "false"
+          labelPullRequestsWhenApproved: "true"
+          labelPullRequestsWhenReviewNeeded: "false"
+          failJobsWhenReviewNeeded: "false"
