--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -24,21 +24,21 @@ jobs:
           # config: '/lint/config/changelog.yml'
           # ignore: './one_file.md ./another_file.md' # multiple files must be separated with single space
 
-  super-linter:
-    # Name the Job
-    name: super linter
-    # Set the agent to run on
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
-      - name: Lint Code Base
-        uses: github/super-linter@v4
-        env:
-          VALIDATE_ALL_CODEBASE: true
-          FILTER_REGEX_EXCLUDE: '^(.*/)?(node_modules|.bundle|files|_site|_data|_img)/'
-          DEFAULT_BRANCH: master
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # super-linter:
+  #   # Name the Job
+  #   name: super linter
+  #   # Set the agent to run on
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
+  #       with:
+  #         # Full git history is needed to get a proper list of changed files within `super-linter`
+  #         fetch-depth: 0
+  #     - name: Lint Code Base
+  #       uses: github/super-linter@v4
+  #       env:
+  #         VALIDATE_ALL_CODEBASE: true
+  #         FILTER_REGEX_EXCLUDE: '^(.*/)?(node_modules|.bundle|files|_site|_data|_img)/'
+  #         DEFAULT_BRANCH: master
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
