--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,13 +1,18 @@
 name: Lint and Test
-on: 
+on:
   push:
   pull_request:
   workflow_dispatch:
 
 # Don't run more than one build per branch
-concurrency: 
+concurrency:
   group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
+
+permissions:
+  contents: read
+  pull-requests: write
+  checks: write
 
 jobs:
   lint-markdown:
@@ -22,24 +27,22 @@ jobs:
         with:
           args: './_posts/*.md ./_pages/*.md'
           config: '.github/markdown-lint-config.yaml'
+
           # config: '/lint/config/changelog.yml'
           # ignore: './one_file.md ./another_file.md' # multiple files must be separated with single space
 
-  # super-linter:
-  #   # Name the Job
-  #   name: super linter
-  #   # Set the agent to run on
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Code
-  #       uses: actions/checkout@v3
-  #       with:
-  #         # Full git history is needed to get a proper list of changed files within `super-linter`
-  #         fetch-depth: 0
-  #     - name: Lint Code Base
-  #       uses: github/super-linter@v4
-  #       env:
-  #         VALIDATE_ALL_CODEBASE: true
-  #         FILTER_REGEX_EXCLUDE: '^(.*/)?(node_modules|.bundle|files|_site|_data|_img)/'
-  #         DEFAULT_BRANCH: master
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # Check for broken markdown links
+    # Ignore with:
+    # <!-- markdown-link-check-disable -->
+    # <!-- markdown-link-check-enable -->
+    # <!-- markdown-link-check-disable-next-line -->
+    # <!-- markdown-link-check-disable-line -->
+  markdown-link-check:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: gaurav-nelson/github-action-markdown-link-check@master
+      with:
+        use-quiet-mode: 'yes'
+        use-verbose-mode: 'yes'
+        folder-path: '_posts, _pages'
