--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url: "https://smcleod.net"
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
-permalink: /:categories/:year/:month/:day/:title
+permalink: /:categories/:year/:month/:day/:title/
 paginate: 100 # amount of posts to show
 paginate_path: /page:num/
 timezone: Australia/Melbourne
