--- a/.github/workflows/broken-link-checker.yml
+++ b/.github/workflows/broken-link-checker.yml
@@ -25,6 +25,7 @@ env:
 
 jobs:
   check-links:
+    if: github.repository == 'sammcj/smcleod'
     strategy:
       matrix:
         environment: ['production']
