Add sync-files for beta

--- a/.github/config/sync-files.yml
+++ b/.github/config/sync-files.yml
@@ -5,8 +5,8 @@
 
 group:
   - files:
-      - source: .
-        dest: .
+      - source: ./
+        dest: ./
         replace: true
         deleteOrphaned: true
         exclude: |
