Add sync-files for beta

--- a/.github/config/sync-files.yml
+++ b/.github/config/sync-files.yml
@@ -10,7 +10,7 @@ group:
     deleteOrphaned: true
     files:
       - .
-      - src: CNAME-beta
+      - source: CNAME-beta
         dest: CNAME
         replace: true
         deleteOrphaned: true
