--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ env:
 
 jobs:
   build:
-    if: github.repository == 'sammcj/smcleod'
+    if: github.repository == 'sammcj/smcleod' && github.ref == 'refs/heads/main'
     strategy:
       matrix:
         environment: ['production']
